fix Align username Profil

--- a/css/publicationviewer_style.css
+++ b/css/publicationviewer_style.css
@@ -62,6 +62,11 @@
 	display: inline-block;
 	vertical-align: middle;
 }
+#publicationviewer-container #content #profil #username
+{
+	display: inline-block;
+	vertical-align: middle;
+}
 #publicationviewer-container #content #profil #avatar
 {
 	display: inline-block;
